<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grid Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="enter_search_term">Enter search term</string>
    <string name="title_activity_image_viewer">Grid Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_set_filters">Grid Image Search</string>
    <string name="set_filters">Set Filters</string>
    <string name="image_size">Image Size</string>
    <string name="color">Color</string>
    <string name="image_type">Image Type</string>
    <string name="site">Site</string>
    <string name="enter_site">Enter domain</string>
    <string name="save">Save</string>
    <string-array name="image_size_array">
        <item>All</item>
        <item>Icon</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>XLarge</item>
        <item>XXLarge</item>
    </string-array>
    <string-array name="image_color_array">
        <item>All</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Teal</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="image_type_array">
        <item>All</item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clip Art</item>
        <item>Line Art</item>
    </string-array></resources>
