<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetFiltersActivity" >


    <TextView
        android:id="@+id/tvSetFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/set_filters"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:layout_below="@+id/tvSetFilters"
        android:layout_marginTop="20dp"
        android:text="@string/image_size"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/tvImageSize"
        android:contentDescription="@string/image_size"
        android:entries="@array/image_size_array"
        android:gravity="right"
        android:prompt="@string/image_size"
        android:spinnerMode="dialog" />
    
    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSetFilters"
        android:layout_below="@+id/tvImageSize"
        android:layout_marginTop="15dp"
        android:text="@string/color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvColorFilter"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:contentDescription="@string/color"
        android:entries="@array/image_color_array"
        android:gravity="right"
        android:prompt="@string/color"
        android:spinnerMode="dialog" />
    
    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:layout_below="@+id/tvColorFilter"
        android:layout_marginTop="15dp"
        android:text="@string/image_type"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvImageType"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/tvImageType"
        android:contentDescription="@string/image_type"
        android:entries="@array/image_type_array"
        android:gravity="right"
        android:prompt="@string/image_type"
        android:spinnerMode="dialog" />
    
    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageType"
        android:layout_below="@+id/tvImageType"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/site"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSite"
        android:layout_below="@+id/tvImageType"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvSite"
        android:hint="@string/enter_site"
        android:layout_marginLeft="15dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        >

    </EditText>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/save"
        android:onClick="saveFilters" />

</RelativeLayout>